--- a/app/views/clients/partials/_email_config.ng.html.haml
+++ b/app/views/clients/partials/_email_config.ng.html.haml
@@ -4,7 +4,7 @@
 .panel.panel-default{"ng-repeat"=>"config in petition.email_configurations_attributes"}
 	.panel-heading
 		.row
-			.col-md-9
+			.col-md-9{:style=>"height: 30px; line-height: 30px;"}
 				{{config.email_type.name}}
 			.col-md-3
 				.text-right
