--- a/app/views/clients/partials/_layout.ng.html.haml
+++ b/app/views/clients/partials/_layout.ng.html.haml
@@ -4,6 +4,6 @@
 %div{"ng-show"=>"settings.layout || false"}
 	.panel{:style=>"padding: 50px 40px"}
 		%p{:style=>"margin-bottom: 0px"}
-			Great! Your petition will look like the sample petiton below.  We'll add some color's in the next step.
+			Great! Your petition will look like the sample petiton below.  We'll add some colors in the next step.
 	#action-container{:style=>"background-color: #fff;", "ng-controller"=>"SamplePetitionController"}
 		%div{"ng-include"=>"sample_page_template()"}
