--- a/app/views/client_views/layout2/signature_template.html.haml
+++ b/app/views/client_views/layout2/signature_template.html.haml
@@ -1,5 +1,5 @@
 .container.text-center{:style=>"width: auto"}
-	.client-logo-wrapper
+	.client-logo-wrapper{"ng-show"=>"has_header_image()"}
 		.client-logo{:style=>"height: 100px", "image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"header_image_full", "is-admin"=>"is_admin"}
 			#header-image{"ng-style" => "header_image_styling()"}
 	#petition-container
@@ -90,7 +90,7 @@
 			.bottom-margin#more-signers-button-wrapper
 				%button.btn.btn-primary#more-signers-button{"ng-hide"=>"comments.items.length >= comments.total", "ng-click"=>"show_more_signatures_click()"}
 					%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.signature_more_signers_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Signers Button Text", "name"=>"signature_more_signers_button_text","required"=>""}
-	.client-logo-wrapper
+	.client-logo-wrapper{"ng-show"=>"has_footer_image()"}
 		.client-logo.text-center#client-logo-bottom{:style=>"height: 50px", "image-upload-overlay"=>"", "title"=>"Add Footer Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"footer_image_full", "is-admin"=>"is_admin"}
 			#footer-image{"ng-style" => "footer_image_styling()"}
-			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Disclaimer Text", "name"=>"disclaimer_text","required"=>""}
+			.disclaimer.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "petition.disclaimer_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"More Disclaimer Text", "name"=>"disclaimer_text"}
