--- a/app/views/clients/_petition_setup.ng.html.haml
+++ b/app/views/clients/_petition_setup.ng.html.haml
@@ -33,7 +33,7 @@
 					%div{:style=>"position: absolute; top: 0px; left: 100px; width: 100%; padding-right: 100px;"}
 						%form{"name"=>"petition_setup", "novalidate" => "", "role"=>"form"}
 							%div
-								%h2.contenteditable.petition-title{:style=>"display: inline-block;", "contenteditable"=>"true", "ng-model" => "petition.name", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Give Your Campaign a Name", "name"=>"petition_name", "required"=>""}
+								%h2.contenteditable.petition-title{:style=>"display: inline-block; line-height: 54px;", "contenteditable"=>"true", "ng-model" => "petition.name", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Give Your Campaign a Name", "name"=>"petition_name", "required"=>""}
 									New Campaign Name
 							%div
 								%ul.nav.action-menu-items.pull-left
