--- a/app/assets/stylesheets/layouts/layout2.css.scss
+++ b/app/assets/stylesheets/layouts/layout2.css.scss
@@ -347,7 +347,8 @@
 			.comment {
 				padding: 10% 4% 10% 0;
 				.user-name {
-					font-size: 1.8em; 
+					font-size: 1.5em; 
+					line-height: 1.0em;
 					font-weight: 800;
 					color: #27aae1;
 				}
