--- a/app/views/layouts/clients/_header.html.haml
+++ b/app/views/layouts/clients/_header.html.haml
@@ -25,7 +25,7 @@
             %ul.dropdown-menu{:style=>"width: 100%"}
               %li.dropdown-menu-title
               %li
-                %a{"href" => "/clients/1/crm_setup"}
+                %a{"ng-href" => "/clients/{{client.client_id}}/crm_setup"}
                   %i.icon-off.pull-left
                   = "CRM Setup"
               %li
