--- a/app/views/client_views/layout2/premium_template.html.haml
+++ b/app/views/client_views/layout2/premium_template.html.haml
@@ -15,29 +15,53 @@
 					#petition-image-wrapper{"image-upload-overlay"=>"", "title"=>"Add Premium Image", "notes"=>"Recommended image size: 350x350px", "image-name"=>"premium_image", "is-admin"=>"is_admin"}
 						%div#petition-image{"ng-style" => "premium_image_styling()"}
 				.col-md-6.top-content-wrapper#premium-form-wrapper
-					.signature-form-container.vertical-middle-cell
-						.row.form-group.clearfix
-							.col-md-6.text-left#first-name-wrapper
-								%input.form-control{"type"=>"text", "placeholder"=>"First Name"}
-							.col-md-6.text-left#last-name-wrapper
-								%input.form-control{"type"=>"text", "placeholder"=>"Last Name"}
-						.form-group
-							%input.form-control{:style=>"width: 100%", "type"=>"text","placeholder"=>"Street Address 1"}
-						.form-group
-							%input.form-control{:style=>"width: 100%", "type"=>"text", "placeholder"=>"Street Address 2"}
-						.form-group
-							%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"City"}
-						.form-group
-							%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"State"}
-						.form-group
-							%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Zip Code"}
-						.form-group
-							%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Phone Number"}
-						.form-group
-							%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address"}
-						.form-group
-							%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
-								%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
+					.signature-form-container.vertical-middle-cell{"ng-switch"=>"disable_forms"}
+						%form{"ng-switch-when"=>"false", :name => "myForm", "novalidate" => true, :style => "margin: 0px;", "role"=>"form"}
+							.row.form-group.clearfix
+								.col-md-6.text-left#first-name-wrapper
+									%input.form-control{"type"=>"text", "placeholder"=>"First Name"}
+								.col-md-6.text-left#last-name-wrapper
+									%input.form-control{"type"=>"text", "placeholder"=>"Last Name"}
+							.form-group
+								%input.form-control{:style=>"width: 100%", "type"=>"text","placeholder"=>"Street Address 1"}
+							.form-group
+								%input.form-control{:style=>"width: 100%", "type"=>"text", "placeholder"=>"Street Address 2"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"City"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"State"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Zip Code"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Phone Number"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address"}
+							.form-group
+								%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
+									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
+						%div{"ng-switch-when"=>"true"}
+							.row.form-group.clearfix
+								.col-md-6.text-left#first-name-wrapper
+									%input.form-control{"type"=>"text", "placeholder"=>"First Name"}
+								.col-md-6.text-left#last-name-wrapper
+									%input.form-control{"type"=>"text", "placeholder"=>"Last Name"}
+							.form-group
+								%input.form-control{:style=>"width: 100%", "type"=>"text","placeholder"=>"Street Address 1"}
+							.form-group
+								%input.form-control{:style=>"width: 100%", "type"=>"text", "placeholder"=>"Street Address 2"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"City"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"State"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Zip Code"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Phone Number"}
+							.form-group
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address"}
+							.form-group
+								%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
+									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
 	.client-logo-wrapper
 		.client-logo.text-center#client-logo-bottom{:style=>"height: 50px", "image-upload-overlay"=>"", "title"=>"Add Footer Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"footer_image_full", "is-admin"=>"is_admin"}
 			#footer-image{"ng-style" => "footer_image_styling()"}
