fixed issue with premium

--- a/app/views/client_views/layout2/premium_template.html.haml
+++ b/app/views/client_views/layout2/premium_template.html.haml
@@ -19,23 +19,23 @@
 						%form{"ng-switch-when"=>"false", :name => "myForm", "novalidate" => true, :style => "margin: 0px;", "role"=>"form"}
 							.row.form-group.clearfix
 								.col-md-6.text-left#first-name-wrapper
-									%input.form-control{"type"=>"text", "placeholder"=>"First Name"}
+									%input.form-control{"type"=>"text", "placeholder"=>"First Name", "required"=>"", "ng-model"=>"premium_registration.first_name"}
 								.col-md-6.text-left#last-name-wrapper
-									%input.form-control{"type"=>"text", "placeholder"=>"Last Name"}
+									%input.form-control{"type"=>"text", "placeholder"=>"Last Name", "required"=>"", "ng-model"=>"premium_registration.last_name"}
 							.form-group
-								%input.form-control{:style=>"width: 100%", "type"=>"text","placeholder"=>"Street Address 1"}
+								%input.form-control{:style=>"width: 100%", "type"=>"text","placeholder"=>"Street Address 1", "required"=>"", "ng-model"=>"premium_registration.street_address_1"}
 							.form-group
-								%input.form-control{:style=>"width: 100%", "type"=>"text", "placeholder"=>"Street Address 2"}
+								%input.form-control{:style=>"width: 100%", "type"=>"text", "placeholder"=>"Street Address 2", "ng-model"=>"premium_registration.street_address_2"}
 							.form-group
-								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"City"}
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"City", "required"=>"", "ng-model"=>"premium_registration.city"}
 							.form-group
-								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"State"}
+								%input.form-control{:style=>"width: 100%","type"=>"text", "required"=>"", "placeholder"=>"State", "ng-model"=>"premium_registration.state"}
 							.form-group
-								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Zip Code"}
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Zip Code", "required"=>"", "ng-model"=>"premium_registration.zip_code"}
 							.form-group
-								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Phone Number"}
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Phone Number", "ng-model"=>"premium_registration.phone_number"}
 							.form-group
-								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address"}
+								%input.form-control{:style=>"width: 100%","type"=>"text", "placeholder"=>"Email Address", "required"=>"", "ng-model"=>"premium_registration.email_address"}
 							.form-group
 								%button.btn.btn-primary{"ng-click"=>"premium_submit_clicked(myForm)"}
 									%span.contenteditable.placeholder-showing{"contenteditable"=>"{{is_admin}}", "ng-model" => "petition.premium_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Button", "name"=>"premium_call_to_action_button_text", "required"=>""}
