added panel if you haven't created a petition

--- a/app/views/clients/_petitions.ng.html.haml
+++ b/app/views/clients/_petitions.ng.html.haml
@@ -2,6 +2,10 @@
 	.col-md-8.col-md-offset-1
 		%h1
 			Your Petitions
+		.panel{:style=>"padding: 50px 40px", "ng-hide"=>"petitions.length > 0"}
+			%p
+				Hey, it doesn't look like you have created any petitions.  Create one >>
+
 		.panel{:style=>"padding: 10px;", "ng-repeat"=>"petition in petitions"}
 			.row-wrapper-fluid
 				.row
