--- a/app/views/clients/_supporters.ng.html.haml
+++ b/app/views/clients/_supporters.ng.html.haml
@@ -4,12 +4,15 @@
 			Your Supporters
 		.panel{:style=>"padding: 10px;", "ng-repeat"=>"supporter in supporters"}
 			.row
-				.col-md-6
-					.avatar{:style=>"float: left; margin-right: 10px;", "ng-style"=>"get_avatar_url(supporter)"}
-					%dl
-						%dd
-							{{supporter.first_name}} {{supporter.last_name}}
-						%dd
-							{{supporter.email}}
-				
-		%pagination{"total-items"=>"totalItems", "page"=>"currentPage", "on-select-page"=>"change_page(page)"}
+				.col-md-12
+					.row
+						.col-md-3
+							.avatar{:style=>"float: left; margin-right: 10px;", "ng-style"=>"get_avatar_url(supporter)"}
+						.col-md-9
+							%dl
+								%dd
+									{{supporter.first_name}} {{supporter.last_name}}
+								%dd
+									{{supporter.email}}
+					
+		%pagination{"total-items"=>"totalItems", "page"=>"currentPage", "on-select-page"=>"change_page(page)", "max-size"=>"maxSize", "boundary-links"=>"true", "rotate"=>"false", "num-pages"=>"numPages"}
