--- a/app/views/client_views/layout2/delivery_template.html.haml
+++ b/app/views/client_views/layout2/delivery_template.html.haml
@@ -69,9 +69,9 @@
 							.media-body
 								%div.comment
 									%div.user-name
-										{{tweet.first_name}} {{tweet.last_name}}
+										{{tweet.user.first_name}} {{tweet.user.last_name}}
 									%div.tweet-message
-										{{tweet.message}}
+										{{tweet.comment}}
 									%div.comment-timeago{:style=>"margin-top: 8px; font-size: .92em"}
 										Tweeted {{tweet.created_at | fromNow }} 
 				%p.text-left{:style=>"padding: 0px 20px", "ng-hide"=>"tweets.items.length > 0"}
