--- a/app/views/layouts/petitions.html.haml
+++ b/app/views/layouts/petitions.html.haml
@@ -7,7 +7,7 @@
     %meta{"property" => "og:title", "content" => strip_tags(@petition.headline_primary)}
     %meta{"property" => "og:type", "content" => "cause"}
     %meta{"property" => "og:url", "content" => @petition.short_url}
-    %meta{"property" => "og:image", "content" => @petition.header_image("square")}
+    %meta{"property" => "og:image", "content" => @petition.petition_image("square")}
     %meta{"property" => "og:site_name", "content" => "www.snaptivist.com"}
     %meta{"property" => "og:locale", "content" => "en_US"}
 
