--- a/app/views/client_views/layout2/delivery_template.html.haml
+++ b/app/views/client_views/layout2/delivery_template.html.haml
@@ -67,11 +67,11 @@
 							%a.pull-left
 								%img.media-object.avatar{"ng-style" => "get_avatar_url(tweet)"}
 							.media-body
-								%div.comment
+								%div.tweet-comment
 									%div.user-name
 										{{tweet.user.first_name}} {{tweet.user.last_name}}
 									%div.tweet-message
-										{{tweet.message.comment}}
+										{{tweet.tweet.message}}
 									%div.comment-timeago{:style=>"margin-top: 8px; font-size: .92em"}
 										Tweeted {{tweet.created_at | fromNow }} 
 				%p.text-left{:style=>"padding: 0px 20px", "ng-hide"=>"tweets.items.length > 0"}
