--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -118,6 +118,15 @@
         -moz-box-shadow: 0 8px 6px -5px #9e9e9e;
         box-shadow: 0 8px 6px -5px #9e9e9e;
     }
+    .disclaimer {
+        margin: 20px auto 10px auto;
+        padding: 4px;
+        max-width: 300px;
+        font-size: .92em;
+        color: #5e5e5e;
+        border: solid 1px #ACB3B6;
+        font-family: 'Lato-Light', sans-serif;
+    }
     #petition-headline {
         display: inline-block; 
         padding-left: 18px; 
