--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -76,7 +76,7 @@
         box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.24);
     }
     .container {
-    	max-width: 728px;
+    	max-width: 782px;
     }
     .drop-shadow-full {
         -moz-box-shadow:0px 0px 14px 3px rgba(0, 0, 0, 0.25);
@@ -87,7 +87,8 @@
         -webkit-box-shadow: 0 8px 6px -5px #9e9e9e;
         -moz-box-shadow: 0 8px 6px -5px #9e9e9e;
         box-shadow: 0 8px 6px -5px #9e9e9e;
-        height: 240px;
+        height: 236px;
+        width: 782px;
         background-position: 50% 50%;
         background-size: cover;
     }
