--- a/app/assets/stylesheets/layouts/layout1-responsive.css.scss
+++ b/app/assets/stylesheets/layouts/layout1-responsive.css.scss
@@ -3,7 +3,7 @@
 @media only screen and (max-width:959px) {
   /*@import 'size/mobile';*/
 	  #action-container {
-	  	#header-logo {
+	  	#header-image {
 	  		height: 88px;
 	  		width: auto;
 			max-width: 300px;
