made some layout changes

--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -89,6 +89,7 @@
         box-shadow: 0 8px 6px -5px #9e9e9e;
         height: 236px;
         width: 782px;
+        margin: 0px auto;
         background-position: 50% 50%;
         background-size: cover;
     }
