--- a/app/assets/stylesheets/layouts/layout2-responsive.css.scss
+++ b/app/assets/stylesheets/layouts/layout2-responsive.css.scss
@@ -90,7 +90,13 @@
 				width: 100%;
 			}
 		}
-	}
+		#signature-container-wrapper, #delivery-container-wrapper {
+				.panel-indented {
+					margin: 0px 20px 18px 20px;
+					padding-bottom: 50px;
+				}
+			}
+		}
 	}
 }
 @media only screen and (max-width:449px) {
