--- a/app/views/clients/partials/_delivery.ng.html.haml
+++ b/app/views/clients/partials/_delivery.ng.html.haml
@@ -1,6 +1,6 @@
 .container#petition-container
 	.row.text-left
-		%h2.contenteditable{"contenteditable"=>"true", "ng-model" => "petition.delivery.headline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Add a Headline to Your Tweet Delivery Page"}
+		%h2.contenteditable{"contenteditable"=>"true", "ng-model" => "petition.delivery.headline", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Add a Headline to Your Tweet Page"}
 			Thanks for Signing!
 	.row
 		%div.well#delivery-container
