--- a/app/views/clients/partials/_modal_template.ng.html.haml
+++ b/app/views/clients/partials/_modal_template.ng.html.haml
@@ -2,7 +2,7 @@
     %button.close{"type"=>"button", "data-dismiss"=>"modal","aria-hidden"=>"true", "ng-click"=>"cancel()"}
         &times;
     %h4.modal-title
-        We found some issues with your petition.  Fix the errors below before moving to the next step.
+        We found some issues with your action.  Fix the errors below before moving to the next step.
 .modal-body
     %ul
         %li{"ng-repeat"=>"error in errors"}
