--- a/app/views/clients/partials/_publish.ng.html.haml
+++ b/app/views/clients/partials/_publish.ng.html.haml
@@ -1,6 +1,6 @@
 .panel{:style=>"padding: 50px 40px"}
 	%p
-		Awesome. You completed your petition.  Now you need to publish it to the web.  If you are not ready to publish quite yet, just click the 'Just Save It' button for now and you can publish it later. >>
+		Awesome. You completed your action.  Now you need to publish it to the web.  If you are not ready to publish quite yet, just click the 'Just Save It' button for now and you can publish it later. >>
 
 	.row
 		.col-md-8.col-md-offset-2
