--- a/app/views/clients/partials/_theme.ng.html.haml
+++ b/app/views/clients/partials/_theme.ng.html.haml
@@ -4,6 +4,6 @@
 %div{"ng-show"=>"settings.theme || false"}
 	.panel{:style=>"padding: 50px 40px"}
 		%p{:style=>"margin-bottom: 0px"}
-			Great! Your petition will look like the sample petiton below.  We'll add some pages to your petition in the next step.
+			Great! Your action will look like the sample action below.  We'll add some pages to your action in the next step.
 	#action-container{:style=>"background-color: #fff;", "ng-controller"=>"SamplePetitionController", "ng-show"=>"settings.theme || false"}
 		%div{"ng-include"=>"sample_page_template()"}
