--- a/app/views/clients/_petition_shares.ng.html.haml
+++ b/app/views/clients/_petition_shares.ng.html.haml
@@ -1,7 +1,7 @@
 .row
 	.col-md-10.col-md-offset-1
 		%h1
-			Petition Shares
+			Shares
 		.panel.panel-default{:style=>"padding: 10px;"}
 			%table.table.table-striped
 				%tr
