--- a/app/views/clients/_petitions.ng.html.haml
+++ b/app/views/clients/_petitions.ng.html.haml
@@ -1,10 +1,10 @@
 .row
 	.col-md-8.col-md-offset-1
 		%h1
-			Your Petitions
+			Your Actions
 		.panel{:style=>"padding: 50px 40px", "ng-hide"=>"petitions.length > 0"}
 			%p
-				Hey, it doesn't look like you have created any petitions.  Create one >>
+				Hey, it doesn't look like you have created any actions.  Create one >>
 
 		.panel{:style=>"padding: 10px;", "ng-repeat"=>"petition in petitions"}
 			.row-wrapper-fluid
