--- a/app/views/clients/partials/_configure_sidebar.ng.html.haml
+++ b/app/views/clients/partials/_configure_sidebar.ng.html.haml
@@ -1,13 +1,13 @@
 %div{:style=>"padding: 10px"}
 	%h5
-		Petition URL
+		Action URL
 	%p
-		Your petition will get a custom Snaptivist url and a unique short url to promote your petition to your followers
+		Your action will get a custom Snaptivist url and a unique short url to promote your petition to your followers
 	%h5
-		Petition Target
+		Action Target
 	%p
 		Snaptivist allows your petition to be targeted directly to a politician or other target
 	%h5
-		Action Tags
+		Tags
 	%p
-		Assigning action tags to your petition allows you to better track your supporters of your campaign and the actions that they have taken	
+		Assigning tags to your action allows you to better track your supporters of your campaign and the actions that they have taken	
